# django-ultimatethumb

./: .coveragerc  .gitignore  .python-version  .travis.yml  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  Makefile  Pipfile  README.rst  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile  conf.py  django_settings.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/modules/: modules.rst
docs/reference/: index.rst  storage.rst  templatetags.rst  thumbnail.rst  utils.rst  views.rst
tests/: settings.py  test_commands.py  test_storage.py  test_templatetags.py  test_thumbnail.py  test_utils.py  test_views.py
tests/factories/: mockapp.py
ultimatethumb/: __init__.py  commands.py  compat.py  storage.py  thumbnail.py  urls.py  utils.py  views.py
ultimatethumb/templatetags/: ultimatethumb_tags.py
ultimatethumb/tests/: settings.py  test_commands.py  test_storage.py  test_templatetags.py  test_thumbnail.py  test_utils.py  test_views.py
ultimatethumb/tests/factories/: mockapp.py
ultimatethumb/tests/resources/mockapp/: models.py
